--- a/login_page.html
+++ b/login_page.html
@@ -20,7 +20,7 @@
     <form class="login-form">
       <input type="text" id = "username" placeholder="username"/>
         <input type="password" id ="password" placeholder="password"/>
-        <!--button onclick="setAllCookie()" --><a id="bad" href="./Dashboard.html" class="button" id="bad" onclick="setAllCookie()"> login</a> 
+        <!--button onclick="setAllCookie()" --><a id="bad" href="" class="button" id="bad" onclick="setAllCookie()"> login</a> 
       <p class="message">Not registered? <a href="#">Create an account</a></p>
     </form>
   </div>
